objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20-29</fullName>
                </value>
                <value>
                    <fullName>30-39</fullName>
                </value>
                <value>
                    <fullName>40-49</fullName>
                </value>
                <value>
                    <fullName>50-59</fullName>
                </value>
                <value>
                    <fullName>60-69</fullName>
                </value>
                <value>
                    <fullName>70+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appt_No_Show_Cancel_Reason__c</fullName>
        <label>Appt No Show/Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_transferring_to_the_area__c</fullName>
        <inlineHelpText>If transferring to the area, enter transfer date.</inlineHelpText>
        <label>Are you transferring to the area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <inlineHelpText>Select all areas of interest</inlineHelpText>
        <label>Area of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cedar Park / Leander</fullName>
                </value>
                <value>
                    <fullName>Central &amp; East Austin</fullName>
                </value>
                <value>
                    <fullName>Dripping Springs</fullName>
                </value>
                <value>
                    <fullName>Georgetown / Liberty Hill</fullName>
                </value>
                <value>
                    <fullName>Lakeway / Bee Cave</fullName>
                </value>
                <value>
                    <fullName>San Marcos</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Ann Arundel</fullName>
                </value>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
                <value>
                    <fullName>Frederick</fullName>
                </value>
                <value>
                    <fullName>Loudoun</fullName>
                </value>
                <value>
                    <fullName>Montgomery</fullName>
                </value>
                <value>
                    <fullName>Prince William</fullName>
                </value>
                <value>
                    <fullName>Sussex</fullName>
                </value>
                <value>
                    <fullName>Talbot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Sales_Assistants__c</fullName>
        <label>Assigned Sales Assistants</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexis Hall</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Cathy Chadwick</fullName>
                </value>
                <value>
                    <fullName>Chandler Meadows</fullName>
                </value>
                <value>
                    <fullName>Diane Tidwell</fullName>
                </value>
                <value>
                    <fullName>Deborah Powell</fullName>
                </value>
                <value>
                    <fullName>Gina Iaccino</fullName>
                </value>
                <value>
                    <fullName>Jill Brodsky</fullName>
                </value>
                <value>
                    <fullName>Melissa Stein</fullName>
                </value>
                <value>
                    <fullName>Paige Kamel</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Rauly Williams</fullName>
                </value>
                <value>
                    <fullName>Sue Walker</fullName>
                </value>
                <value>
                    <fullName>Tonya McKim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Model_Price__c</fullName>
        <label>Base Model Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <label>Builder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_of_Interest__c</fullName>
        <label>Builder of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Builders</fullName>
                </value>
                <value>
                    <fullName>AVI Homes</fullName>
                </value>
                <value>
                    <fullName>Brohn Homes</fullName>
                </value>
                <value>
                    <fullName>Brookfield Residential</fullName>
                </value>
                <value>
                    <fullName>Buffington Homes</fullName>
                </value>
                <value>
                    <fullName>Castle Rock Communities</fullName>
                </value>
                <value>
                    <fullName>David Weekley Homes</fullName>
                </value>
                <value>
                    <fullName>Dream Finders Homes</fullName>
                </value>
                <value>
                    <fullName>Experience Park</fullName>
                </value>
                <value>
                    <fullName>Highland Homes</fullName>
                </value>
                <value>
                    <fullName>Milestone Community Builders</fullName>
                </value>
                <value>
                    <fullName>MX3 Homes</fullName>
                </value>
                <value>
                    <fullName>Newleaf Homes</fullName>
                </value>
                <value>
                    <fullName>Pacesetter Homes</fullName>
                </value>
                <value>
                    <fullName>Perry Homes</fullName>
                </value>
                <value>
                    <fullName>Taylor Morrison</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CaseSafeId(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoBuyerFirstName__c</fullName>
        <label>Co Buyer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoBuyerLastName__c</fullName>
        <label>Co Buyer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_History_Aus__c</fullName>
        <label>Community History Aus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Cal__c</fullName>
        <label>Community History Cal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Den__c</fullName>
        <label>Community History Den</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Edm__c</fullName>
        <label>Community History Edm</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_NorCal__c</fullName>
        <label>Community History NorCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_SoCal__c</fullName>
        <label>Community History SoCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Tor__c</fullName>
        <label>Community History Tor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Wash__c</fullName>
        <label>Community History Wash</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Aus__c</fullName>
        <label>Community List Aus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Cal__c</fullName>
        <label>Community List Cal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Den__c</fullName>
        <label>Community List Den</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Edm__c</fullName>
        <label>Community List Edm</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_NorCal__c</fullName>
        <label>Community List NorCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_SoCal__c</fullName>
        <label>Community List SoCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Tor__c</fullName>
        <label>Community List Tor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Wash__c</fullName>
        <label>Community List Wash</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Aus__c</fullName>
        <label>Community Picklist Aus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Cal__c</fullName>
        <label>Community Picklist Cal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Den__c</fullName>
        <label>Community Picklist Den</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Edm__c</fullName>
        <label>Community Picklist Edm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_NorCal__c</fullName>
        <label>Community Picklist NorCal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_SoCal__c</fullName>
        <label>Community Picklist SoCal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Tor__c</fullName>
        <label>Community Picklist Tor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Wash__c</fullName>
        <label>Community Picklist Wash</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Wsh__c</fullName>
        <label>Community Picklist Wsh</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist__c</fullName>
        <label>Community Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Text__c</fullName>
        <description>To hold the community information from the web to lead form</description>
        <label>Community Interested In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Expiry_Date__c</fullName>
        <label>Consent Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Notes__c</fullName>
        <label>Consent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Received_Date__c</fullName>
        <label>Consent Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Revocation_Received_Date__c</fullName>
        <label>Consent Revocation Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Revoked_Date__c</fullName>
        <label>Consent Revoked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Type__c</fullName>
        <label>Consent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_to_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_From_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Converted From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedUser__c</fullName>
        <label>CreatedUser</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Appointment__c</fullName>
        <label>Date of First Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_own_or_rent__c</fullName>
        <label>Do you currently own or rent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Purchase_Date__c</fullName>
        <label>Est Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Purchase_Price__c</fullName>
        <label>Estimated Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Home_to_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Home to Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exit_Open_Time_Dependent_Workflows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this checkbox is true then the lead will be kicked   out of any outstanding time-dependent workflows because it will be part of the criteria of the workflows.  During the custom convert, we will set this to true so that the lead can be converted</inlineHelpText>
        <label>Exit Open Time Dependent Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FP_Name__c</fullName>
        <label>FP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Swing__c</fullName>
        <label>Home Swing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Income__c</fullName>
        <label>Household Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under $50,000</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $74,999</fullName>
                </value>
                <value>
                    <fullName>$75,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $299,999</fullName>
                </value>
                <value>
                    <fullName>$300,000 - $399,999</fullName>
                </value>
                <value>
                    <fullName>$400,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 Plus</fullName>
                </value>
                <value>
                    <fullName>$35,000 - $49,999</fullName>
                    <isActive>false</isActive>
                    <label>$35,000 - $49,999</label>
                </value>
                <value>
                    <fullName>$400,000+</fullName>
                    <isActive>false</isActive>
                    <label>$400,000+</label>
                </value>
                <value>
                    <fullName>Up to $34,999</fullName>
                    <isActive>false</isActive>
                    <label>Up to $34,999</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Was_Consent_Received__c</fullName>
        <label>How Was Consent Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>How_Was_Consent_Received</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Drive By</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Flyer/Brochure</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Google/Online Search</fullName>
                </value>
                <value>
                    <fullName>Internet Radio</fullName>
                </value>
                <value>
                    <fullName>Magazine Ad</fullName>
                </value>
                <value>
                    <fullName>Newspaper Ad</fullName>
                </value>
                <value>
                    <fullName>Online Ad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Radio Ad</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Television Ad</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_house_hunting__c</fullName>
        <label>How long have you been house hunting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Month</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6+ Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_Lifecycle_Stage__c</fullName>
        <inlineHelpText>Set Lifecycle Stage to a predetermined value before cloning main lead</inlineHelpText>
        <label>Hubspot Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hubspot_Original_Source_Drill_Down_1__c</fullName>
        <label>Hubspot Original Source Drill-Down 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Original_Source_Drill_Down_2__c</fullName>
        <label>Hubspot Original Source Drill-Down 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Original_Source__c</fullName>
        <label>Hubspot Original Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Community_history_WSH__c</fullName>
        <label>Interested Community history WSH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Community_history__c</fullName>
        <label>Interested Community history</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_Communtiy_WSH__c</fullName>
        <label>Interested Communtiy WSH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Communtiy__c</fullName>
        <label>Interested Communtiy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internet_Sales_Rep__c</fullName>
        <label>Online Sales Counselor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAutomatedStageUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutomatedStageUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hubspot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Hubspot lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Web_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Web Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_BdayParty__c</fullName>
        <label>Your friends throw you a surprise b'day</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Daytoself__c</fullName>
        <label>You have a day to yourself. You'll be</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Dreamhome__c</fullName>
        <label>Your dream home has..</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Dreamjob__c</fullName>
        <label>Your dream job</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Likelytobecaught__c</fullName>
        <label>You're most likely to be caught</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_StayActive__c</fullName>
        <label>To stay active, you're most likely to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Themesong__c</fullName>
        <label>Pick your theme song</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Thirsty__c</fullName>
        <label>Thirsty? Pick your Poison</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Titlememoir__c</fullName>
        <label>The title of your memoir</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_Wontrip__c</fullName>
        <label>You've won a luxurious, all expense trip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTTribe_Quiz_shipWreckjob__c</fullName>
        <label>You're shipwrecked with your friends</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KT_Tribe__c</fullName>
        <label>KT Tribe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KTtribe_Quiz_PickDinner__c</fullName>
        <label>Pick Your dinner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTtribe_Quiz_Retirement__c</fullName>
        <label>For you, retirement is all about</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KTtribe_Quiz_SpiritAnimal__c</fullName>
        <label>Pick your spirit animal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_TX__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date (TX)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Appointment_Set_End_DateTime__c</fullName>
        <label>Last Appointment Set End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Appointment_Set_Start_DateTime__c</fullName>
        <label>Last Appointment Set Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Appointment_Set_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Appointment Set With</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Responded_Date_Time__c</fullName>
        <label>Last Customer Responded Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_HubSpot_Sync__c</fullName>
        <label>Last HubSpot Sync</label>
        <type>DateTime</type>
    </fields>
</CustomObject>